--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@
 #  limitations under the License.
 name: Publish
 description: "Publishs tests as Maven artifacts to GitHub Packages."
+inputs:
+  workspace:
+    description: "Base directory of project."
+    required: true
 runs:
   using: composite
   steps:
@@ -26,10 +30,10 @@ runs:
         architecture: 'x64'
         cache: 'gradle'
     - name: Make gradlew executable
-      run: chmod +x ${{ env.GITHUB_WORKSPACE }}/gradlew
+      run: chmod +x ${{ inputs.workspace }}/gradlew
       shell: bash
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Test solution with autograding tests
-      run: ${{ env.GITHUB_WORKSPACE }}/gradlew test
+      run: ${{ inputs.workspace }}/gradlew test
       shell: bash
